docs/api/qiskit/0.33/qiskit.circuit.library.EvolvedOperatorAnsatz.mdx
---
title: EvolvedOperatorAnsatz
description: API reference for qiskit.circuit.library.EvolvedOperatorAnsatz
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.EvolvedOperatorAnsatz
---

# EvolvedOperatorAnsatz

<Class id="qiskit.circuit.library.EvolvedOperatorAnsatz" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/library/evolved_operator_ansatz.py" signature="EvolvedOperatorAnsatz(operators=None, reps=1, evolution=None, insert_barriers=False, name='EvolvedOps', parameter_prefix='t', initial_state=None)">
  Bases: `qiskit.circuit.library.n_local.n_local.NLocal`

  The evolved operator ansatz.

  **Parameters**

  *   **operators** (*Optional\[Union\[*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")*,* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*, list]*) – The operators to evolve. If a circuit is passed, we assume it implements an already evolved operator and thus the circuit is not evolved again. Can be a single operator (circuit) or a list of operators (and circuits).
  *   **reps** (`int`) – The number of times to repeat the evolved operators.
  *   **evolution** (*Optional\[*[*EvolutionBase*](qiskit.opflow.evolutions.EvolutionBase "qiskit.opflow.evolutions.EvolutionBase")*]*) – An opflow converter object to construct the evolution. Defaults to Trotterization.
  *   **insert\_barriers** (`bool`) – Whether to insert barriers in between each evolution.
  *   **name** (`str`) – The name of the circuit.
  *   **parameter\_prefix** (`Union`\[`str`, `List`\[`str`]]) – Set the names of the circuit parameters. If a string, the same prefix will be used for each parameters. Can also be a list to specify a prefix per operator.
  *   **initial\_state** (`Optional`\[`QuantumCircuit`]) – A QuantumCircuit object to prepend to the circuit.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[`AncillaQubit`]
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.data" name="data" />

  ### entanglement

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.entanglement" name="entanglement">
    Get the entanglement strategy.

    **Return type**

    `Union`\[`str`, `List`\[`str`], `List`\[`List`\[`str`]], `List`\[`int`], `List`\[`List`\[`int`]], `List`\[`List`\[`List`\[`int`]]], `List`\[`List`\[`List`\[`List`\[`int`]]]], `Callable`\[\[`int`], `str`], `Callable`\[\[`int`], `List`\[`List`\[`int`]]]]

    **Returns**

    The entanglement strategy, see `get_entangler_map()` for more detail on how the format is interpreted.
  </Attribute>

  ### entanglement\_blocks

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.entanglement_blocks" name="entanglement_blocks">
    The blocks in the entanglement layers.

    **Return type**

    `List`\[`Instruction`]

    **Returns**

    The blocks in the entanglement layers.
  </Attribute>

  ### evolution

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.evolution" name="evolution">
    The evolution converter used to compute the evolution.

    **Returns**

    The evolution converter used to compute the evolution.

    **Return type**

    [EvolutionBase](qiskit.opflow.evolutions.EvolutionBase "qiskit.opflow.evolutions.EvolutionBase")
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[`ParameterExpression`, `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### initial\_state

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.initial_state" name="initial_state">
    Return the initial state that is added in front of the n-local circuit.

    **Return type**

    `Any`

    **Returns**

    The initial state.
  </Attribute>

  ### insert\_barriers

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.insert_barriers" name="insert_barriers">
    If barriers are inserted in between the layers or not.

    **Return type**

    `bool`

    **Returns**

    True, if barriers are inserted in between the layers, False if not.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.instances" name="instances" attributeValue="= 9" />

  ### metadata

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_layers

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_layers" name="num_layers">
    Return the number of layers in the n-local circuit.

    **Return type**

    `int`

    **Returns**

    The number of layers in the circuit.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_parameters" name="num_parameters">
    **Return type**

    `int`
  </Attribute>

  ### num\_parameters\_settable

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_parameters_settable" name="num_parameters_settable">
    The number of total parameters that can be set to distinct values.

    This does not change when the parameters are bound or exchanged for same parameters, and therefore is different from `num_parameters` which counts the number of unique [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects currently in the circuit.

    **Return type**

    `int`

    **Returns**

    The number of parameters originally available in the circuit.

    <Admonition title="Note" type="note">
      This quantity does not require the circuit to be built yet.
    </Admonition>
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_qubits" name="num_qubits">
    **Return type**

    `int`
  </Attribute>

  ### operators

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.operators" name="operators">
    The operators that are evolved in this circuit.

    **Returns**

    The operators to be evolved (and circuits) contained in this ansatz.

    **Return type**

    list
  </Attribute>

  ### ordered\_parameters

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.ordered_parameters" name="ordered_parameters">
    The parameters used in the underlying circuit.

    This includes float values and duplicates.

    **Examples**

    ```python
    >>> # prepare circuit ...
    >>> print(nlocal)
         ┌───────┐┌──────────┐┌──────────┐┌──────────┐
    q_0: ┤ Ry(1) ├┤ Ry(θ[1]) ├┤ Ry(θ[1]) ├┤ Ry(θ[3]) ├
         └───────┘└──────────┘└──────────┘└──────────┘
    >>> nlocal.parameters
    {Parameter(θ[1]), Parameter(θ[3])}
    >>> nlocal.ordered_parameters
    [1, Parameter(θ[1]), Parameter(θ[1]), Parameter(θ[3])]
    ```

    **Return type**

    `List`\[`Parameter`]

    **Returns**

    The parameters objects used in the circuit.
  </Attribute>

  ### parameter\_bounds

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.parameter_bounds" name="parameter_bounds">
    The parameter bounds for the unbound parameters in the circuit.

    **Return type**

    `Optional`\[`List`\[`Tuple`\[`float`, `float`]]]

    **Returns**

    A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If None is returned, problem is fully unbounded.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.parameters" name="parameters">
    **Return type**

    `ParameterView`
  </Attribute>

  ### preferred\_init\_points

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.preferred_init_points" name="preferred_init_points">
    Getter of preferred initial points based on the given initial state.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.qregs" name="qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[`Qubit`]
  </Attribute>

  ### reps

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.reps" name="reps">
    The number of times rotation and entanglement block are repeated.

    **Return type**

    `int`

    **Returns**

    The number of repetitions.
  </Attribute>

  ### rotation\_blocks

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.rotation_blocks" name="rotation_blocks">
    The blocks in the rotation layers.

    **Return type**

    `List`\[`Instruction`]

    **Returns**

    The blocks in the rotation layers.
  </Attribute>
</Class>

